[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
langgraph = ">=0.0.25"
langchain-anthropic = "^0.3.10"
langchain-community = "^0.3.21"
pydantic = ">=2.0"
langgraph-cli = {extras = ["inmem"], version = "^0.1.89"}
langchain-openai = "^0.3.12"
requests = "^2.32.3"
langgraph-sdk = "^0.1.61"
debugpy = "^1.8.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
